bk_ida/gccida/c3/k6_store_unit_blockage_range
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage_range/src/insn-attrtab.c:5172:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 4709, "k6_store_unit_blockage_range"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage_range/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage_range/src/insn-attrtab.c:5172:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 4709, "k6_store_unit_blockage_range"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage_range/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_blockage_range/src/obj/insn-attrtab.o] Error 1
